# lilypool

./: README.md  lilypool.cabal  stack.yaml
examples/: c_major.txt  c_major_simple.txt
src/: Lexer.hs  LilyVal.hs  Lilyval.hs  Main.hs  Parser.hs
