name:                lilypool
version:             0.1.0.0
synopsis:            A subset of lilypond to be used for autofinger
-- description:
homepage:            https://github.com/jmorag/lilypool#readme
license:             BSD3
license-file:        LICENSE
author:              Joseph Morag
maintainer:          joseph.morag@columbia.edu
copyright:           2018 Joseph Morag
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lilypool
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       megaparsec >= 6.3.0
